resources update 2