@@ -63,14 +63,5 @@ tasks.named<Jar>("jar") {
   }
 }
 
-tasks.register<JavaExec>("runR") {
-  group = "application"
-  description = "Runs the application with javafx"
-  classpath = sourceSets["main"].runtimeClasspath
-  mainClass.set(application.mainClass)
-  jvmArgs = listOf("--module-path", classpath.asPath, "--add-modules", "javafx.controls,javafx.fxml")
-  workingDir = projectDir // Ensures the working directory is set to the project directory
-  args = listOf() // If you need to pass arguments, add them here
-}
 
 
